@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.2-4.01
-Date: 2009-2-17
+Version: 1.2-5
+Date: 2009-2-20
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
